--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "git": "^0.1.5"
+    "git": "^0.1.5",
+    "nodemon": "^2.0.18"
   }
 }
